agui_macros/tests/compile-fail/build_field_no_value.rs
use agui_core::WidgetRef;
use agui_macros::build;
use agui_primitives::Quad;

fn main() {
    let _widget: WidgetRef = build! {
        Quad {
            color:
        }
    };
}
